update login and UnitTest

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,10 +12,10 @@
     </div>
 
     <!-- Login Form -->
-    <form novalidate #loginForm="ngForm" (ngSubmit)="login(loginForm)">
-      <input type="text" id="email" class="fadeIn second" name="email" placeholder="login" [(ngModel)]="loginRequest.email" #email="ngModel" required maxlength="30" minlength="5"   >
+    <form novalidate #loginForm="ngForm" >
+      <input type="text" id="email" class="fadeIn second" name="email" placeholder="email" [(ngModel)]="loginRequest.email" #email="ngModel" required maxlength="30" minlength="5"   >
       <input type="text" id="password" class="fadeIn third" name="password" placeholder="password" [(ngModel)]="loginRequest.password"  #password="ngModel" required maxlength="30" minlength="5" >
-      <input type="submit" class="fadeIn fourth" value="Log In">
+      <input type="submit" class="fadeIn fourth" value="Log In" >
 
     </form>
 
@@ -48,9 +48,8 @@
     <!-- Remind Passowrd -->
     <div id="formFooter">
       <a [routerLink] = "'/signUp'" class="underlineHover" href="#">Creat account?</a>
+        {{token.token}}
     </div>
-
-
   </div>
 </div>
 
@@ -62,3 +61,4 @@
 
 <router-outlet></router-outlet>
 </body>
+
